@@ -1,3 +1,9 @@
+2007-10-25  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* stdio.c: Provide errno as a parameter and set errno before calling
+	  perror(3), as errno is cleared during P/Invoke.
+	* map.h: Updated prototype for Mono_Posix_Stdlib_perror().
+
 2007-09-08  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* dirent.c: NAME_MAX isn't defined on Solaris; fix the build.
